--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 
-VITE_SERVER_URL = http://localhost:8080
+VITE_SERVER_URL = https://long-underclothes-bat.cyclic.app
 VITE_ADMIN_EMAIL = ramaymaheshwari03@gmail.com
