Product page, Search bar addded

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGODB_USERNAME = ramay
-MONGODB_PASSWORD = grocery123
+# MONGODB_PASSWORD = grocery123
 MONGODB_URL = "mongodb+srv://ramay:grocery123@ramaystore.mucdn4l.mongodb.net/RamayStore?retryWrites=true&w=majority"
