--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -19,6 +20,5 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22"
   },
-  "devDependencies": {},
   "description": ""
 }
